# sae_components

./: .ezpodinclude  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  LICENSE  README.md  interfaces.py  matryoshka_clt_test_model.arch_ref  pyproject.toml  requirements.txt  sae_components.code-workspace  setup.py  test.safetensors  test_neptune_query.py
research/: README.md  pyproject.toml
research/experiments/: clt_test.py  dynamic_thresh_arch_compare1.py  dynamic_thresh_gemma4.py  dynamic_thresh_gemma4_compare1.py  dynamic_thresh_test.py  dynamic_thresh_test_ol_sweep.py  dynamic_thresh_test_ol_sweep_comlm.py  dynamic_thresh_test_ol_sweep_comlm_small.py  dynamic_thresh_test_ol_sweep_opt.py  gated_test.py  matryoshka_clt_test.py  stg_arch_test.py  sweep_expressions_test.py  sweepvar_example.py  vanilla_config.py  vanilla_crosscoder.py  vanilla_example_training.py
research/experiments/stg_rewrite/: baseline_dynamic_thresh.py  baseline_vanilla.py  train_tg_no_noise_test.py  train_tg_no_noise_test_sweep.py  train_tg_v1.py
research/scripts/: challenge_test.py  comlm_acts_trace_etc.py  datasets_test.py  gemma4_test.py  make_int_metadata.py  nnsight_data.py  test_comlm_cfg.py  test_load.py  test_load_arch.py  test_store_cached.py  test_store_feats.py  test_store_feats_w_context.py  test_sweep_expressions.py
research/scripts/api/: app.py
research/scripts/evaluation_examples/: check_arch_loaded.py  comlm_test.py  custom_sparse_ops.py  example.py  explorer_gui.py  explorer_testing_thing.py  fftest2.py  fftest3.py  indexing.py  load.py  load_comlm.py  load_comlm_tahoe.py  metadata_test.py  patchtest.py  script_test_pert.py  store.py  test1.py  test2.py  test3.py  test4.py  test5.py
research/scripts/template_test/: config.py  model.py
research/src/saeco_research/: dim_batch.py
research/src/saeco_research/analysis/: SAView.py  ddmenuprop.py  l0_cmp_plot.py  run_history.py  uiitem.py  wandb_analyze.py
research/src/saeco_research/analysis/l0_compare/: __init__.py  l0_compare_view.py
research/src/saeco_research/architectures/: experiment_targeting_step_size.py  freqbalance_test.py  frozen_splitting.py  gated_config.py  incrementally_introduced.py  matryoshka_clt.py  norm_dec_sparsity_penalty.py  tied_gated.py  tied_gated2.py  topk_tied_gated.py
research/src/saeco_research/architectures/dynamic_thresh_prolu/: model.py  model_zipf.py
research/src/saeco_research/architectures/iterated_rand_split/: model.py
research/src/saeco_research/architectures/matry_clt/: matryoshka_clt.py  test_clt.py
research/src/saeco_research/architectures/new_arch_style/: arch.py
research/src/saeco_research/architectures/runner_style/anth_update/: __init__.py  config.py  initial_l0_compare_cfg.py  initial_l0_compare_cfg2.py  initial_l0_compare_cfg3.py  initial_l0_compare_cfg4.py  l0_reproduce.py  l0_reproduce2.py  l0_reproduce2test_targeting_types.py  l0_reproduce2types_and_step_sizes.py  model.py  sweep.py  testing_no_penalty.py  testing_no_penalty_olmo.py
research/src/saeco_research/architectures/runner_style/deep/: catseq.py  deep.py  deep_resid_gated.py
research/src/saeco_research/architectures/runner_style/dg_test/: config.py  dg_gate.py  model.py
research/src/saeco_research/architectures/runner_style/dynamic_thresh_prolu/: __init__.py  config.py  config_zipf.py  model.py  zipf.py
research/src/saeco_research/architectures/runner_style/gated/: gated_config.py  gated_model.py
research/src/saeco_research/architectures/runner_style/hierarchical_iterated_frozen/: dichotomous.py  model.py  run.py
research/src/saeco_research/architectures/runner_style/jumprelu/: jumprelu_config.py  jumprelu_l1_config.py  jumprelu_l1_model.py  jumprelu_model.py
research/src/saeco_research/architectures/runner_style/jumprelu_mod/: __init__.py  jumprelu_config.py  jumprelu_l1_config.py  jumprelu_l1_model.py  modified_jumprelu_model.py
research/src/saeco_research/architectures/runner_style/o1_test_stg/: mlp_layer.py  other_lin.py  stg_grad_config.py  stg_grad_deep_model.py  stg_grad_model.py  sthreshgrad.py
research/src/saeco_research/architectures/runner_style/prolu/: build.py  prolu.py  prolu_sae.py  shrinkgate.py  shrinkgate2.py
research/src/saeco_research/architectures/runner_style/resid_test/: __init__.py  config.py  initial_l0_compare_cfg.py  model.py  sweep.py  testing_no_penalty.py
research/src/saeco_research/architectures/runner_style/silod_topk/: __init__.py  config.py  model.py
research/src/saeco_research/architectures/runner_style/sweep_tg/: mlp_layer.py  (+3 more)
research/src/saeco_research/architectures/sweep_tg/: arch.py  stg_argch.py  symm_arch.py  tg_claude_1.py
research/src/saeco_research/comlm/: comlm_model_cfg.py  data_config_definitions.py
research/src/saeco_research/evaluation/: BMStorShelf.py  __init__.py  cache_keys.py  cache_version.py  cached_artifacts.py  evaluation.py  features.py  filtered.py  filtered_modular.py  model_interface.py  named_filter.py  return_objects.py  token_utils.py  utils.py  views.py
research/src/saeco_research/evaluation/api_components/: api.py  api_modal.py
research/src/saeco_research/evaluation/eval_components/: coacts.py  enrichment.py  family_generation.py  family_ops.py  patching.py  perturbation_analysis.py
research/src/saeco_research/evaluation/fastapi_models/: feature_active_docs_count.py  filtered_query.py  intersection_filter.py  metadata_enrichment.py  token_enrichment.py  top_active.py
research/src/saeco_research/evaluation/storage/: MetadataBuilder.py  cache_config.py  cached_acts.py  cacher.py  chunk.py  stored_metadata.py
research/src/saeco_research/evaluation/unused/: aggregation.py
research/tests/: test_filtered.py  test_research_public_imports.py
sweepable/: LICENSE  README.md  pyproject.toml
sweepable/src/sweepable/: SweepExpression.py  Swept.py  SweptNode.py  __init__.py  expressions_utils.py  has_sweep.py  sweep_expression.py  sweep_expressions.py  sweepable_config.py  swept.py  swept_node.py
sweepable/tests/: test_sweep_behavior.py  test_sweepable_config.py  test_sweepable_public_imports.py
(+874 files in other folders)
