[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saeco"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Glen Taggart", email = "glenmtaggart@gmail.com"}
]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.12.3",
]

[project.scripts]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.3",
]


[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E741"]
fixable = ["ALL"]
unfixable = ["B"]

[tool.pyright]
pythonVersion = "3.13"

