[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saeco"
version = "0.1.0"
description = "SAE modular components."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Glen Taggart", email = "glenmtaggart@gmail.com"}
]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
]

[project.scripts]
sweeprunner = "saeco.sweeps.sweeprunner_cli:main"
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src/saeco/*"]


[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E741"]
fixable = ["ALL"]
unfixable = ["B"]

[tool.pyright]
pythonVersion = "3.13"

