[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saeco"
version = "0.1.0"
description = "A modular library for training and analyzing sparse autoencoders."
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Glen Taggart", email = "glenmtaggart@gmail.com"}
]
keywords = ["sparse-autoencoder", "interpretability", "mechanistic-interpretability", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "attrs",
    "datasets",
    "einops",
    "jaxtyping",
    "nnsight",
    "numpy",
    "pandas",
    "paramsight @ git+https://github.com/nqgl/paramsight.git",
    "pydantic>=2.12.3",
    "safetensors",
    "schedulefree",
    "sweepable>=0.1.0",
    "torch>=2.4.1",
    "tqdm",
    "transformers",
    "wandb",
    "wrapt>=2.0",
    "zstd",
]

[project.urls]
Repository = "https://github.com/nqgl/sae_components"

[project.scripts]
sweeprunner = "saeco.sweeps.sweeprunner_cli:main"

[project.optional-dependencies]
# Remote orchestration for distributed sweeps
remote = ["ezpod"]
# Development tools
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.3",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/saeco"]

[tool.hatch.metadata]
# Required because `paramsight` is currently a git+https dep, not on PyPI.
allow-direct-references = true


[tool.ruff]
target-version = "py313"
# Restricts first-party package discovery to these three:
src = ["src", "sweepable/src", "research/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E741"]
fixable = ["ALL"]
unfixable = ["B"]

[tool.pyright]
pythonVersion = "3.13"

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "sweepable/src",
]
testpaths = [
    "tests",
]

[tool.uv.extra-build-dependencies]
torchlars = ["torch"]
